# BehaviorBench

./: .gitignore  README.md  requirements.txt  setup.cfg
behavior_bench/: __init__.py
behavior_bench/configs/: simple_tabletop_v1.yaml
behavior_bench/core/: environment.py
examples/: ex_simple_tabletop.py
fiddle/: setup_objaverse.py  simple_tabletop_env.py
