[metadata]
name = behavior-bench
version = 0.0.1
description = A benchmark suite
long_description = file: README.md
long_description_content_type = text/markdown
author = Jason Lee
license = MIT License
url = https://github.com/jasonlee328/BehaviorBench

[options]
packages = find:
python_requires = >=3.10

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    venv

max-line-length = 80
